Dijkstra real data, heap correct; o(mn) wrong

--- a/Stanford_Online_course/Homework5/Dijkistra accelerate searching the min.ipynb
+++ b/Stanford_Online_course/Homework5/Dijkistra accelerate searching the min.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -56,14 +56,14 @@
     "    queue = [(0, start)]\n",
     "    while queue:\n",
     "        path_len, v = heappop(queue)\n",
-    "        if A[v] is None: # v is unvisited\n",
-    "            A[v] = path_len\n",
+    "        if A[v-1] is None: # v is unvisited\n",
+    "            A[v-1] = path_len\n",
     "            for w, edge_len in graph[v].items():\n",
-    "                if A[w] is None:\n",
+    "                if A[w-1] is None:\n",
     "                    heappush(queue, (path_len + edge_len, w))\n",
     "\n",
     "    # to give same result as original, assign zero distance to unreachable vertices             \n",
-    "    return [0 if x is None else x for x in A] "
+    "    return [1000000 if x is None else x for x in A] "
    ]
   },
   {
@@ -77,64 +77,10 @@
     {
      "data": {
       "text/plain": [
-       "(0, 1)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from heapq import heappush, heappop\n",
-    "queue=[(0,1),(10,3),(5,2)]\n",
-    "heappop(queue)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 'c', 14)\n",
-      "(5, 'a', 10)\n",
-      "(7, 'b', 11)\n"
-     ]
-    }
-   ],
-   "source": [
-    "h = []\n",
-    "heappush(h, (5, 'a',10))\n",
-    "heappush(h, (7, 'b',11))\n",
-    "heappush(h, (1, 'c',14))\n",
-    "\n",
-    "\n",
-    "print heappop(h)\n",
-    "print heappop(h)\n",
-    "print heappop(h)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "[(0, 2), (2, 6)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,47 +92,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1', '2,1', '4,2']\n",
-      "['2', '1,2', '3,2', '5,4']\n",
-      "['3', '2,2', '5,1']\n",
-      "['4', '1,2', '5,3']\n",
-      "['5', '2,4', '3,1']\n"
-     ]
-    }
-   ],
-   "source": [
-    "filename = \"./data/sanity.txt\"\n",
-    "\n",
-    "G = []\n",
-    "\n",
-    "with open(filename) as f:\n",
-    "    for line in f:\n",
-    "      print line.rstrip().split(\" \")\n",
-    "      G.append(line.rstrip().split(\" \"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "A={'1':0}\n",
-    "Visited = set()\n",
-    "Visited.add('1')"
+    "filename = \"./data/dijkstraData.txt\"  \n",
+    "\n",
+    "G = {}\n",
+    "\n",
+    "with open(filename) as f:\n",
+    "    for line in f:\n",
+    "      eachline = line.rstrip().split(\"\\t\")\n",
+    "      tmp ={}\n",
+    "      for edge in eachline[1:]:\n",
+    "         node_len = edge.split(\",\")\n",
+    "         tmp[int(node_len[0])]=int(node_len[1])\n",
+    "      G[int(eachline[0])] = tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "graph=G\n",
+    "start=1\n",
+    "A = [None] * len(graph)\n",
+    "queue = [(0, start)]\n",
+    "while queue:\n",
+    "    path_len, v = heappop(queue)\n",
+    "    if A[v-1] is None: # v is unvisited\n",
+    "\n",
+    "        A[v-1] = path_len\n",
+    "        for w, edge_len in graph[v].items():\n",
+    "            #print w\n",
+    "            if A[w-1] is None:\n",
+    "                heappush(queue, (path_len + edge_len, w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2599, 2610, 2947, 2052, 2367, 2399, 2029, 2442, 2505, 3068]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "select = [7,37,59,82,99,115,133,165,188,197]\n",
+    "[A[k-1] for k in select]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[10626, 5293, 5116, 5379, 2367, 2834, 12509, 2442, 4112, 8436]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open(\"./output/shortpath.pickle\",\"wb\") as f:\n",
+    "    pickle.dump( A, f)"
    ]
   },
   {
@@ -306,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
