you stored the final distance only but the correct one stores the tentative distance and replaces with shortest path finally

--- a/Stanford_Online_course/Homework5/Dijkistra o(mn)-real data.ipynb
+++ b/Stanford_Online_course/Homework5/Dijkistra o(mn)-real data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -20,10 +20,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('./output/shortpath.pickle', 'rb') as handle:\n",
+    "    truth = pickle.load(handle)\n",
+    "with open('./output/nodeseq.pickle', 'rb') as handle:\n",
+    "    seq_true = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -35,60 +59,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "with open('./output/shortpath.pickle', 'rb') as handle:\n",
-    "    truth = pickle.load(handle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "previous 172 current source set(['1'])\n",
-      "previous 114 current source set(['1', '114'])\n",
-      "previous 140 current source set(['1', '114', '140'])\n",
-      "previous 92 current source set(['1', '114', '92', '140'])\n",
-      "previous 145 current source set(['1', '114', '145', '92', '140'])\n",
-      "previous 129 current source set(['145', '140', '1', '114', '129', '92'])\n",
-      "previous 70 current source set(['145', '140', '1', '114', '70', '129', '92'])\n",
-      "previous 9 current source set(['145', '140', '1', '114', '70', '9', '129', '92'])\n",
-      "previous 199 current source set(['145', '199', '140', '1', '114', '70', '9', '129', '92'])\n",
-      "previous 80 current source set(['145', '199', '140', '1', '114', '70', '9', '129', '80', '92'])\n",
-      "previous 35 current source set(['145', '199', '140', '35', '1', '114', '70', '9', '129', '80', '92'])\n",
-      "previous 19 current source set(['145', '199', '140', '19', '35', '1', '114', '70', '9', '129', '80', '92'])\n",
-      "previous 194 current source set(['145', '199', '140', '19', '194', '35', '1', '114', '70', '9', '129', '80', '92'])\n",
-      "previous 119 current source set(['145', '199', '140', '19', '194', '35', '1', '114', '70', '9', '129', '80', '92', '119'])\n",
-      "previous 187 current source set(['145', '199', '140', '19', '194', '35', '1', '114', '187', '70', '9', '129', '80', '92', '119'])\n",
-      "previous 85 current source set(['145', '199', '140', '19', '194', '35', '1', '114', '187', '70', '9', '129', '80', '92', '119', '85'])\n",
-      "previous 27 current source set(['145', '199', '140', '19', '194', '35', '1', '114', '27', '187', '70', '9', '129', '80', '92', '119', '85'])\n",
-      "previous 134 current source set(['145', '199', '140', '19', '194', '134', '35', '1', '114', '27', '187', '70', '9', '129', '80', '92', '119', '85'])\n",
-      "previous 122 current source set(['145', '199', '140', '19', '194', '134', '35', '1', '114', '122', '27', '187', '70', '9', '129', '80', '92', '119', '85'])\n",
-      "previous 170 current source set(['170', '145', '199', '140', '19', '194', '134', '35', '1', '114', '122', '27', '187', '70', '9', '129', '80', '92', '119', '85'])\n",
-      "previous 131 current source set(['170', '145', '199', '140', '19', '194', '134', '131', '35', '1', '114', '122', '27', '187', '70', '9', '129', '80', '92', '119', '85'])\n",
-      "previous 164 current source set(['199', '194', '114', '131', '134', '80', '119', '170', '27', '1', '187', '9', '85', '145', '140', '122', '70', '164', '129', '92', '19', '35'])\n",
-      "previous 128 current source set(['199', '194', '114', '131', '134', '80', '119', '170', '27', '1', '187', '9', '85', '145', '140', '128', '122', '70', '164', '129', '92', '19', '35'])\n",
-      "previous 72 current source set(['199', '194', '114', '131', '134', '80', '119', '170', '27', '1', '187', '9', '85', '145', '140', '128', '122', '72', '70', '164', '129', '92', '19', '35'])\n",
-      "previous 16 current source set(['199', '194', '114', '131', '134', '80', '119', '170', '27', '1', '187', '9', '85', '145', '140', '128', '122', '72', '70', '164', '129', '92', '16', '19', '35'])\n",
-      "previous 39 current source set(['199', '194', '114', '131', '134', '80', '119', '170', '27', '1', '187', '9', '85', '145', '140', '128', '122', '72', '70', '164', '129', '92', '39', '16', '19', '35'])\n",
-      "badnode 11 current source 35\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "seq = [1]\n",
+    "k=1\n",
     "while len(Visited)<total:\n",
     "    tmp={}\n",
     "    for S in Visited:\n",
@@ -96,20 +75,25 @@
     "            edge = Front.split(\",\")\n",
     "            if edge[0] not in Visited:\n",
     "               tmp[edge[0]] = A[S] + int(edge[1])\n",
-    "    print \"previous\",minkey,\"current source\",Visited\n",
+    "    #print \"previous\",minkey,\"current source\",Visited\n",
     "    minkey = min(tmp, key=tmp.get)\n",
     "    A[minkey]=tmp[minkey]\n",
     "#print Visited\n",
     "    Visited.add(minkey)\n",
-    "    if not all([A[key]==truth[int(key)-1] for key in A.keys()]):\n",
-    "        print \"badnode\",minkey,\"current source\",S\n",
-    "        break\n",
+    "    seq.append(int(minkey))\n",
+    "    if not all(tmp[key]>=tmp[minkey] for key in tmp):\n",
+    "   # if k ==9:\n",
+    "       break\n",
+    "    k+=1\n",
+    "#     if not all([A[key]==truth[int(key)-1] for key in A.keys()]):\n",
+    "#         print \"badnode\",minkey,\"current source\",S\n",
+    "#         break\n",
     "#print Visited"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -117,170 +101,286 @@
     {
      "data": {
       "text/plain": [
-       "{'10': 5559,\n",
-       " '100': 3787,\n",
-       " '101': 9497,\n",
-       " '102': 4916,\n",
-       " '103': 4365,\n",
-       " '104': 6647,\n",
-       " '105': 6354,\n",
-       " '107': 3761,\n",
-       " '108': 2491,\n",
-       " '109': 9441,\n",
-       " '11': 1913,\n",
-       " '110': 5983,\n",
-       " '111': 4323,\n",
-       " '112': 3185,\n",
-       " '113': 10321,\n",
-       " '115': 2834,\n",
-       " '117': 2597,\n",
-       " '118': 9638,\n",
-       " '12': 9905,\n",
-       " '120': 7619,\n",
-       " '121': 4466,\n",
-       " '123': 2805,\n",
-       " '124': 9832,\n",
-       " '125': 2909,\n",
-       " '126': 6259,\n",
-       " '127': 11644,\n",
-       " '130': 4265,\n",
-       " '132': 4201,\n",
-       " '133': 9996,\n",
-       " '135': 7651,\n",
-       " '136': 2417,\n",
-       " '138': 8727,\n",
-       " '139': 7410,\n",
-       " '14': 10865,\n",
-       " '141': 8192,\n",
-       " '142': 6026,\n",
-       " '143': 8697,\n",
-       " '144': 4085,\n",
-       " '146': 5803,\n",
-       " '148': 7974,\n",
-       " '149': 3109,\n",
-       " '150': 3517,\n",
-       " '151': 5835,\n",
-       " '152': 10795,\n",
-       " '153': 10441,\n",
-       " '154': 5364,\n",
-       " '155': 5547,\n",
-       " '156': 5573,\n",
-       " '157': 2143,\n",
-       " '158': 4575,\n",
-       " '159': 7571,\n",
-       " '160': 5041,\n",
-       " '162': 4824,\n",
-       " '163': 8164,\n",
-       " '165': 2442,\n",
-       " '166': 3814,\n",
-       " '167': 6046,\n",
-       " '168': 2038,\n",
-       " '169': 2776,\n",
-       " '17': 4642,\n",
-       " '171': 5319,\n",
-       " '172': 1990,\n",
-       " '173': 2069,\n",
-       " '174': 3558,\n",
-       " '175': 7797,\n",
-       " '176': 10374,\n",
-       " '177': 3829,\n",
-       " '178': 6772,\n",
-       " '179': 8683,\n",
-       " '18': 10500,\n",
-       " '180': 11357,\n",
-       " '181': 9107,\n",
-       " '182': 8367,\n",
-       " '183': 2308,\n",
-       " '184': 8435,\n",
-       " '185': 6940,\n",
-       " '186': 8627,\n",
-       " '188': 6769,\n",
-       " '189': 3323,\n",
-       " '190': 4171,\n",
-       " '192': 9305,\n",
-       " '193': 4508,\n",
-       " '195': 6082,\n",
-       " '196': 11118,\n",
-       " '197': 7482,\n",
-       " '198': 4060,\n",
-       " '2': 10707,\n",
-       " '20': 2351,\n",
-       " '200': 4685,\n",
-       " '21': 4073,\n",
-       " '22': 6239,\n",
-       " '23': 9604,\n",
-       " '24': 9005,\n",
-       " '25': 3681,\n",
-       " '26': 9995,\n",
-       " '28': 10471,\n",
-       " '29': 9986,\n",
-       " '3': 10946,\n",
-       " '30': 4612,\n",
-       " '31': 10853,\n",
-       " '32': 4042,\n",
-       " '33': 7982,\n",
-       " '34': 3091,\n",
-       " '36': 3392,\n",
-       " '37': 5256,\n",
-       " '38': 5987,\n",
-       " '4': 6028,\n",
-       " '40': 4340,\n",
-       " '41': 7747,\n",
-       " '42': 4433,\n",
-       " '43': 8542,\n",
-       " '44': 11026,\n",
-       " '45': 9425,\n",
-       " '46': 3777,\n",
-       " '47': 10209,\n",
-       " '48': 3985,\n",
-       " '49': 4096,\n",
-       " '50': 4190,\n",
-       " '51': 6421,\n",
-       " '53': 2420,\n",
-       " '55': 8517,\n",
-       " '56': 11665,\n",
-       " '57': 4691,\n",
-       " '59': 8798,\n",
-       " '6': 9201,\n",
-       " '61': 9146,\n",
-       " '63': 9653,\n",
-       " '64': 7069,\n",
-       " '65': 9908,\n",
-       " '66': 3884,\n",
-       " '68': 7731,\n",
-       " '7': 10673,\n",
-       " '71': 6775,\n",
-       " '73': 9594,\n",
-       " '74': 10320,\n",
-       " '75': 5953,\n",
-       " '76': 10085,\n",
-       " '77': 8057,\n",
-       " '78': 7378,\n",
-       " '79': 7990,\n",
-       " '8': 4158,\n",
-       " '81': 9251,\n",
-       " '82': 5379,\n",
-       " '84': 11081,\n",
-       " '87': 5322,\n",
-       " '88': 3046,\n",
-       " '89': 6375,\n",
-       " '90': 6395,\n",
-       " '93': 9773,\n",
-       " '94': 6732,\n",
-       " '95': 9735,\n",
-       " '96': 2398,\n",
-       " '97': 7073,\n",
-       " '98': 5844,\n",
-       " '99': 2367}"
+       "200"
       ]
      },
-     "execution_count": 544,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tmp"
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "minkey = min(tmp, key=tmp.get)\n",
+    "print minkey"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all(tmp[key]>=tmp[minkey] for key in tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "982"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp['80']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in tmp:\n",
+    "    if tmp[key]==982:\n",
+    "        print key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 114, 140, 92, 145, 129, 70, 9, 199]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tmp={}\n",
+    "for S in Visited:\n",
+    "    for Front in G[int(S)-1][1:]:\n",
+    "        edge = Front.split(\",\")\n",
+    "        if edge[0] not in Visited:\n",
+    "           tmp[edge[0]] = A[S] + int(edge[1])\n",
+    "#print \"previous\",minkey,\"current source\",Visited\n",
+    "minkey = min(tmp, key=tmp.get)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'194'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minkey"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "982"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "truth[79]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'80'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-43-f771d47b6fab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtmp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'80'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: '80'"
+     ]
+    }
+   ],
+   "source": [
+    "tmp['80']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 114, 140, 92, 145, 129, 70, 9, 199, 80, 35, 19]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 114, 140, 92, 145, 129, 70, 9, 199, 65]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq_true[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "check =[i==j for i,j in zip(seq_true,seq)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 199, 65] [9, 199, 80]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print seq_true[7:10], seq[7:10]"
    ]
   },
   {
@@ -4670,7 +4770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
