--- a/Stanford_Online_course/Homework5/Dijkistra accelerate searching the min.ipynb
+++ b/Stanford_Online_course/Homework5/Dijkistra accelerate searching the min.ipynb
@@ -52,7 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# This solution stores all the possible distance from visited nodes to a single front node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -63,6 +74,7 @@
     "    A = [None] * len(graph)\n",
     "    queue = [(0, start)]\n",
     "    while queue:\n",
+    "        print \"queue\",queue\n",
     "        path_len, v = heappop(queue)\n",
     "        if A[v-1] is None: # v is unvisited\n",
     "            A[v-1] = path_len\n",
@@ -72,6 +84,43 @@
     "\n",
     "    # to give same result as original, assign zero distance to unreachable vertices             \n",
     "    return [1000000 if x is None else x for x in A] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "queue [(0, 1)]\n",
+      "queue [(5, 4), (10, 2)]\n",
+      "queue [(7, 5), (8, 2), (14, 3), (10, 2)]\n",
+      "queue [(8, 2), (10, 2), (14, 3), (13, 3)]\n",
+      "queue [(9, 3), (10, 2), (14, 3), (13, 3)]\n",
+      "queue [(10, 2), (13, 3), (14, 3)]\n",
+      "queue [(13, 3), (14, 3)]\n",
+      "queue [(14, 3)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 8, 9, 5, 7]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G={1:{2:10,4:5},2:{4:2,3:1},3:{5:4},4:{2:3,3:9,5:2},5:{1:7,3:6}}\n",
+    "Dijkstra(G,1)"
    ]
   },
   {
