lineup on two computers

--- a/Stanford_Online_course/Homework5/Dijkistra inspect 2 solutions on a toy example.ipynb
+++ b/Stanford_Online_course/Homework5/Dijkistra inspect 2 solutions on a toy example.ipynb
@@ -98,25 +98,25 @@
     "#source: http://www.cnblogs.com/hanahimi/p/4692638.html\n",
     "def Dijkstra(G,v0,INF=9999999):\n",
     "\n",
-    "         book = set()\n",
-    "         minv = v0\n",
+    "     book = set()\n",
+    "     minv = v0\n",
     "\n",
-    "         dis = dict((k,INF) for k in G.keys())\n",
-    "         dis[v0] = 0\n",
-    "\n",
-    "         while len(book)<len(G):\n",
-    "             book.add(minv)                                  # 确定当期顶点的距离\n",
-    "             for w in G[minv]:                               # 以当前点的中心向外扩散\n",
-    "                if dis[minv] + G[minv][w] < dis[w]:         # 如果从当前点扩展到某一点的距离小与已知最短距离  \n",
-    "                #  if w not in book:\n",
-    "                     dis[w] = dis[minv] + G[minv][w]         # 对已知距离进行更新\n",
-    "\n",
-    "             new = INF                                       # 从剩下的未确定点中选择最小距离点作为新的扩散点\n",
-    "             for v in dis.keys():\n",
-    "                 if v in book: continue\n",
-    "                 if dis[v] < new: \n",
-    "                     new = dis[v]\n",
-    "                     minv = v\n",
+    "     dis = dict((k,INF) for k in G.keys())\n",
+    "     dis[v0] = 0\n",
+    "     \n",
+    "     while len(book)<len(G):\n",
+    "         book.add(minv)                                  # 确定当期顶点的距离\n",
+    "         for w in G[minv]:                               # 以当前点的中心向外扩散\n",
+    "            # if dis[minv] + G[minv][w] < dis[w]:         # 如果从当前点扩展到某一点的距离小与已知最短距离  \n",
+    "              if w not in book:\n",
+    "                 dis[w] = dis[minv] + G[minv][w]         # 对已知距离进行更新\n",
+    "         \n",
+    "         new = INF                                       # 从剩下的未确定点中选择最小距离点作为新的扩散点\n",
+    "         for v in dis.keys():\n",
+    "             if v in book: continue\n",
+    "             if dis[v] < new: \n",
+    "                 new = dis[v]\n",
+    "                 minv = v\n",
     "     return dis\n",
     " \n",
     " \n",
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
