--- a/Stanford_Online_course/Homework5/Dijkistra o(mn)-real data-graph-dict.ipynb
+++ b/Stanford_Online_course/Homework5/Dijkistra o(mn)-real data-graph-dict.ipynb
@@ -106,21 +106,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "G={1:{2:10,4:5},2:{4:2,3:1},3:{5:4},4:{2:3,3:9,5:2},5:{1:7,3:6}}\n",
-    "A={1:0}\n",
-    "Visited = set()\n",
-    "Visited.add(1)\n",
-    "total = len(G)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {
     "collapsed": false,
@@ -137,9 +122,7 @@
     "               tmp[tail] = min(tmp[tail],A[S] + G[S][tail])\n",
     "    minkey = min(tmp, key=tmp.get)\n",
     "    A[minkey]=tmp[minkey]\n",
-    "    Visited.add(minkey)\n",
-    "\n",
-    "\n"
+    "    Visited.add(minkey)\n"
    ]
   },
   {
