--- a/Stanford_Online_Course2/Homework3/2_real_data_Huffman.ipynb
+++ b/Stanford_Online_Course2/Homework3/2_real_data_Huffman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -85,9 +85,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def traverse(rootnode):\n",
+    "  thislevel = [rootnode]\n",
+    "  depth = 0\n",
+    "  first = True\n",
+    "  while thislevel:\n",
+    "    nextlevel = list()\n",
+    "    for n in thislevel:\n",
+    "      if first and n.left == None and n.right == None:\n",
+    "        short = depth\n",
+    "        first = False\n",
+    "      #print n.weight\n",
+    "      if n.left: nextlevel.append(n.left)\n",
+    "      if n.right: nextlevel.append(n.right)\n",
+    "    thislevel = nextlevel\n",
+    "    depth +=1\n",
+    "  return short,depth\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -96,7 +124,7 @@
        "(9, 20)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
