completion time is done, kruskal algorithm half completed

--- a/Stanford_Online_course/Homework5/Dijkistra inspect 2 solutions on a toy example.ipynb
+++ b/Stanford_Online_course/Homework5/Dijkistra inspect 2 solutions on a toy example.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tail in G[1]:\n",
+    "    print tail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -41,13 +62,13 @@
      "output_type": "stream",
      "text": [
       "visited set([1])\n",
-      "tmp defaultdict(<function <lambda> at 0x7f772c0ffd70>, {2: 10, 4: 5})\n",
+      "tmp defaultdict(<function <lambda> at 0x7f38e4024398>, {2: 10, 4: 5})\n",
       "visited set([1, 4])\n",
-      "tmp defaultdict(<function <lambda> at 0x7f772c0ffed8>, {2: 8, 3: 14, 5: 7})\n",
+      "tmp defaultdict(<function <lambda> at 0x7f38e40242a8>, {2: 8, 3: 14, 5: 7})\n",
       "visited set([1, 4, 5])\n",
-      "tmp defaultdict(<function <lambda> at 0x7f772c1819b0>, {2: 8, 3: 13})\n",
+      "tmp defaultdict(<function <lambda> at 0x7f38e4024398>, {2: 8, 3: 13})\n",
       "visited set([1, 2, 4, 5])\n",
-      "tmp defaultdict(<function <lambda> at 0x7f772c118050>, {3: 9})\n"
+      "tmp defaultdict(<function <lambda> at 0x7f38e40242a8>, {3: 9})\n"
      ]
     }
    ],
@@ -70,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
