--- a/Stanford_Online_course/Homework5/Dijkistra accelerate searching the min.ipynb
+++ b/Stanford_Online_course/Homework5/Dijkistra accelerate searching the min.ipynb
@@ -1,28 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-48d744baa174>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-48d744baa174>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    When you add a new charted vertex S2, the path length to S1's neighbours through S1 does not change.\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "# In your 1st version of implementation, you repeated compute A[S]+SW\n",
     "When you add a new charted vertex S2, the path length to S1's neighbours through S1 does not change.\n",
     "So you need to keep all the tenative distance from all visited vertices to all front nodes, and the corresponding \n",
     "   front vertices.\n",
     "For each iteration, you pop out a pair of (tenative distance, front vertices),\n",
-    "# no need to do this add the chosen front vertices to the set of visited vertices\n",
+    "# no need to  add the chosen front vertices to the set of visited vertices\n",
     "add the tenative distances to vertices reachable from the chosen front vertices (charted neighbours don't count)\n",
     "                                                                            \n",
     "end when there is no tenative distance in the queue"
@@ -70,7 +59,7 @@
     "                if A[w-1] is None:\n",
     "                    heappush(queue, (path_len + edge_len, w))\n",
     "\n",
-    "    # to give same result as original, assign zero distance to unreachable vertices             \n",
+    "    # to give same result as original, assign zero distance to unreachable vertices             D\n",
     "    return [1000000 if x is None else x for x in A] "
    ]
   },
